# FLOW-3D

./: .gitignore  README.md  pyproject.toml
src/flow_3d/: __init__.py  manage.py
src/flow_3d/cli/: __init__.py  __main__.py  version.py
src/flow_3d/cli/mcp/: __main__.py
src/flow_3d/data/documentation/: configuration.html  customization.html  eula.html  genindex.html  glossary.html  index.html  input-variable-summary-units.html  installation.html  maintenance.html  model-reference.html  model-setup.html  numerical-options.html  objects.inv  outputs.html  postprocessing.html  search.html  searchindex.js  sim-manager.html  simulate.html  theory.html  troubleshooting.html  tutorial.html  user-feedback.html  utilities.html  whats-new.html  zbibliography.html
src/flow_3d/data/documentation/_sources/: configuration.rst.txt  customization.rst.txt  eula.rst.txt  glossary.rst.txt  index.rst.txt  input-variable-summary-units.rst.txt  installation.rst.txt  maintenance.rst.txt  model-reference.rst.txt  model-setup.rst.txt  numerical-options.rst.txt  outputs.rst.txt  (+10 more)
src/flow_3d/data/workspace/: manage.py
src/flow_3d/job/: huggingface.py
src/flow_3d/mcp/: __init__.py  __main__.py  resources.py
src/flow_3d/portfolio/: __init__.py  base.py  workspace.py
src/flow_3d/simulation/: __init__.py  base.py  huggingface.py  measurements.py  name.py  parameters.py  post_processing.py  prepin.py  run.py  status.py  view.py  visualizations.py
src/flow_3d/simulation/utils/: compression.py  crop.py  decorators.py  mesh.py  multiprocessing.py
src/flow_3d/workspace/: __init__.py  base.py  huggingface.py  utils.py
src/flow_3d/workspace/simulation/: base.py  build.py  clear.py  huggingface.py  measure.py  post.py  run.py  view.py  visualize.py
tests/: test_manage.py
(+8 files in other folders)
