[project]
name = "FLOW-3D"
dynamic = ["version"] 
description = "Python wrapper for FLOW-3D Version 12.0 Update 2"
readme = "README.md"
authors = [
  { name="Peter Pak", email="ppak10@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "f90nml>=1.4.5",
    "hatch>=1.14.1",
    "huggingface-hub>=0.32.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pint>=0.24.4",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
    "rich>=14.0.0",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/ppak10/FLOW-3D"
Issues = "https://github.com/ppak10/FLOW-3D/issues"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
]
mcp = [
    "mcp>=1.12.2",
]

[project.scripts]
flow_3d = "flow_3d.cli:app"

[tool.black]
line-length = 88
target-version = ["py310"]

